Fix blog section alignment

--- a/sass/css/_base.scss
+++ b/sass/css/_base.scss
@@ -46,11 +46,8 @@ main {
 article,
 section {
   width: 100%;
-}
-
-article {
-  max-width: 43.75rem;
   text-align: left;
+  max-width: 43.75rem;
 }
 
 section {
