--- a/sass/css/index.scss
+++ b/sass/css/index.scss
@@ -24,6 +24,10 @@ main > pre {
   position: relative;
 }
 
+section {
+  text-align: center;
+}
+
 .features {
   margin-top: 2rem;
 }
